TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/Trade_Marketing_Agreement__c.object-meta.xml
<CustomObject>
    <label>Trade Marketing Agreement</label>
    <nameField>
        <label>Trade Marketing Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade Marketing Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>