TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the discount, used to calculate recap form quantities.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>