TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/fields/Signature_Received__c.field-meta.xml
<CustomField>
    <fullName>Signature_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a PDF has been received from the customer.</description>
    <label>Signature Received</label>
    <type>Checkbox</type>
</CustomField>