TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Starting date of the TMA, used to calculate the recap quantities.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>