TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>Total discount generated by this agreement.</description>
    <label>Total Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>