TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement__c/fields/Trade_Marketing_Agreement_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Trade_Marketing_Agreement_Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trade Marketing Agreement Promotion</label>
    <referenceTo>Trade_Marketing_Agreement_Promotion__c</referenceTo>
    <relationshipLabel>Trade Marketing Agreements</relationshipLabel>
    <relationshipName>Trade_Marketing_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>